Deep rewrite of 7 remaining topic documents (batch final)
by-topic/datetime/index.md (877 → 1105 lines):
- java.time internals from source (LocalDate: int year, byte month/day)
- ZoneRules DST gap/overlap, DateTimeFormatter ResolverStyle
- TemporalAdjusters/Queries, Clock testability
- Shaojin Wen toString optimization, Colebourne JSR 310 story

by-topic/math/index.md (617 → 851 lines):
- strictfp JEP 306, StrictMath fdlibm, Anton Artemov Java port
- BigDecimal precision, financial best practices
- Random → ThreadLocalRandom → SplittableRandom → RandomGenerator
- SecureRandom DRBG, HexFormat, Math.clamp, Vector API math

by-topic/api/exceptions/index.md (673 → 863 lines):
- Helpful NPE (JEP 358) message generation mechanism
- StackWalker API, exception performance, OmitStackTraceInFastThrow
- Virtual Thread exceptions: StructuredTaskScope propagation
- Pattern Matching exhaustiveness, MatchException

by-topic/net/index.md (670 → 987 lines):
- Scope distinction from concurrency/network/
- DNS cache, URL.equals DNS problem, Proxy/ProxySelector
- Unix Domain Sockets (JEP 380), HTTPS/SSL
- Virtual threads + NioSocketImpl auto-unmount

by-topic/language/string/index.md (703 → 976 lines):
- Compact Strings LATIN1/UTF16 dispatch, constant pool internals
- JEP 280 invokedynamic concatenation, String Deduplication
- Shaojin Wen optimizations: toString/parseInt/UUID fast paths

by-topic/platform/macos/index.md (488 → 796 lines):
- Apple Silicon W^X, Metal pipeline, code signing/notarization
- jpackage .dmg, Aqua L&F dark mode, APFS case-insensitive
- mach_vm_remap ZGC, 16KB page size

by-topic/platform/containers/index.md (734 → 902 lines):
- cgroup v1/v2 detection chain, MaxRAMPercentage formula
- CPU shares vs quota, ActiveProcessorCount impact table
- Kubernetes probes, GraalVM Native Image, JFR in containers

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>